# hexpip

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  build.bat  build.ps1  build.sh  main.cpp
.github/workflows/: build.yml  test.yml
src/component/Gameplay/: Dice.h  Round.h  Score.h
src/component/Gameplay/Tags/: EndRoundButtonTag.h  ReRollButtonTag.h
src/component/UI/: UIButton.h  UIButtonSprites.h  UIDiceSprites.h  UIInteractable.h  UILayout.h  UISprite.h  UIText.h  UITransform.h
src/core/: InputManager.cpp  InputManager.h  Path.h  RandomManager.cpp  RandomManager.h  Registry.cpp  Registry.h  gameContext.h  upgrades.h
src/core/event/: Event.h  MouseEvent.h
src/core/gameStates/: gameStateMachine.cpp  gameStateMachine.h
src/core/gameStates/states/: gameOverState.cpp  gameOverState.h  gameState.cpp  gameState.h  menuState.cpp  menuState.h  pausedState.cpp  pausedState.h  playingState.cpp  playingState.h
src/gameplay/: HexPipRules.cpp  HexPipRules.h
src/graphics/: FontAtlas.cpp  FontAtlas.h  Graphics.cpp  Graphics.h  TextureLoader.cpp  TextureLoader.h
src/systems/Gameplay/: ButtonDisablingSystem.cpp  ButtonDisablingSystem.h  DiceSetSystem.cpp  DiceSetSystem.h  DiceSystem.cpp  DiceSystem.h  EndRoundSystem.cpp  EndRoundSystem.h  RerollSystem.cpp  RerollSystem.h  ScoringSystem.cpp  ScoringSystem.h  UpdateTextSystem.cpp  UpdateTextSystem.h
src/systems/UI/: ButtonSpriteSystem.cpp  ButtonSpriteSystem.h  ButtonSystem.cpp  ButtonSystem.h  DiceSpriteSystem.cpp  DiceSpriteSystem.h  InteractionSystem.cpp  InteractionSystem.h  PositionDiceSystem.cpp  PositionDiceSystem.h  RenderSpriteSystem.cpp  RenderSpriteSystem.h  RenderTextSystem.cpp  RenderTextSystem.h
src/window/: Window.cpp  Window.h
tests/: test_possibleMoves.cpp  test_scoring.cpp
